# libnop

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/modules/: FindGMock.cmake
docs/: format.md  getting-started.md
examples/: CMakeLists.txt  interface.cpp  pipe.cpp  shared.cpp  shared.py  simple_protocol.cpp  stream.cpp  stream_utilities.h  string_to_hex.h  table.cpp  variant.cpp
include/nop/: protocol.h  serializer.h  status.h  structure.h  table.h  value.h
include/nop/base/: array.h  container_reader.h  container_writer.h  deque.h  encoding.h  encoding_byte.h  enum.h  handle.h  logical_buffer.h  macros.h  map.h  members.h  optional.h  pair.h  reference_wrapper.h  result.h  serializer.h  set.h  string.h  table.h  tuple.h  types.h  utility.h  value.h  variant.h  vector.h
include/nop/rpc/: interface.h  simple_method_receiver.h  simple_method_sender.h
include/nop/traits/: function_traits.h  is_comparable.h  is_detected.h  is_fungible.h  is_template_base_of.h  void.h
include/nop/types/: enum_flags.h  file_handle.h  handle.h  optional.h  result.h  thread_local.h  variant.h
include/nop/types/detail/: logical_buffer.h  member_pointer.h  variant.h
include/nop/utility/: backtrace.h  bounded_reader.h  bounded_writer.h  buffer_reader.h  buffer_writer.h  compiler.h  constexpr_buffer_writer.h  die.h  endian.h  fd_reader.h  fd_writer.h  pedantic_buffer_reader.h  pedantic_buffer_writer.h  sip_hash.h  stream_reader.h  stream_writer.h
scripts/: aggregate.py
test/: CMakeLists.txt  constexpr_tests.cpp  encoding_tests.cpp  endian_tests.cpp  enum_flags_tests.cpp  fungible_tests.cpp  handle_tests.cpp  interface_tests.cpp  mock_reader.h  mock_writer.h  nop_tests.cpp  optional_tests.cpp  result_tests.cpp  serializer_tests.cpp  sip_hash_tests.cpp  test_reader.h  test_utilities.h  test_writer.h  thread_local_tests.cpp  utility_tests.cpp  variant_tests.cpp
test/integration/: CMakeLists.txt
unified/: base.h
